ideia de estrutura aplicada, ainda sob revisao

--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
@@ -7,20 +8,47 @@
     <link rel="stylesheet" href="../css/style.css" type="text/css">
     <script src="../js/script.js" defer></script>
 </head>
+
 <body>
-    <div id="menu"></div>
-    <header>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Desenvolvimento</li>
-                <li>Fotografia</li>
-                <li>Sobre mim</li>
-                <li>Contato</li>
-            </ul>
-        </nav>
-        <div></div>
-        <div></div>
-    </header>
+    <div id="menu">
+        <header>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>Desenvolvimento</li>
+                    <li>Fotografia</li>
+                    <li>Sobre mim</li>
+                    <li>Contato</li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+
+    <hr>
+    <div id="welcome">
+        <h1>Welcome!</h1>
+        <p>It's nice to see you here!</p>
+        <button class="button" type="button">Let's go!</button>
+    </div>
+
+    <hr>
+    <div id="development">
+        <h2>Development</h2>
+        <p>Check out some projects!</p>
+        <button class="button" type="button">See more</button>
+    </div>
+
+    <div id="photography">
+        <h3>Photography series to be seen!</h3>
+        <p>Check out the series!</p>
+        <button class="button" type="button">See more</button>
+    </div>
+
+    <hr>
+    <div id="social">
+        <p>~~ social media links ~~</p>
+    </div>
+    <footer>Desenvolvido por Marcos Vinicius Ferreira - Copyright &#169 2021</footer>
 </body>
+
 </html>
