Adicionado css e mais divs pra estrutura

--- a/html/index.html
+++ b/html/index.html
@@ -23,30 +23,31 @@
             </nav>
         </header>
     </div>
-
     <hr>
-    <div id="welcome">
-        <h1>Welcome!</h1>
-        <p>It's nice to see you here!</p>
-        <button class="button" type="button">Let's go!</button>
-    </div>
+    <div id="container">
+        <div id="welcome">
+            <h1>Welcome!</h1>
+            <p>It's nice to see you here!</p>
+            <button class="button" type="button">Let's go!</button>
+        </div>
+        <hr>
+        <div id="development">
+            <h2>Development</h2>
+            <p>Check out some projects!</p>
+            <button class="button" type="button">See more</button>
+        </div>
 
-    <hr>
-    <div id="development">
-        <h2>Development</h2>
-        <p>Check out some projects!</p>
-        <button class="button" type="button">See more</button>
-    </div>
+        <div id="photography">
+            <h3>Photography series to be seen!</h3>
+            <p>Check out the series!</p>
+            <button class="button" type="button">See more</button>
+        </div>
 
-    <div id="photography">
-        <h3>Photography series to be seen!</h3>
-        <p>Check out the series!</p>
-        <button class="button" type="button">See more</button>
-    </div>
-
-    <hr>
-    <div id="social">
-        <p>~~ social media links ~~</p>
+        <hr>
+        <div id="social">
+            <h4>Social Media</h4>
+            <p>~~ social media links ~~</p>
+        </div>
     </div>
     <footer>Desenvolvido por Marcos Vinicius Ferreira - Copyright &#169 2021</footer>
 </body>
