estudando estrutura do css

--- a/html/index.html
+++ b/html/index.html
@@ -10,44 +10,49 @@
 </head>
 
 <body>
-    <div id="menu">
-        <header>
-            <nav>
-                <ul>
-                    <li>Home</li>
-                    <li>Desenvolvimento</li>
-                    <li>Fotografia</li>
-                    <li>Sobre mim</li>
-                    <li>Contato</li>
-                </ul>
-            </nav>
-        </header>
-    </div>
+    <section>
+        <div id="menu">
+            <header>
+                <nav>
+                    <ul>
+                        <li>Home</li>
+                        <li>Desenvolvimento</li>
+                        <li>Fotografia</li>
+                        <li>Sobre mim</li>
+                        <li>Contato</li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
+    </section>
     <hr>
-    <div id="container">
-        <div id="welcome">
-            <h1>Welcome!</h1>
-            <p>It's nice to see you here!</p>
-            <button class="button" type="button">Let's go!</button>
-        </div>
-        <hr>
-        <div id="development">
-            <h2>Development</h2>
-            <p>Check out some projects!</p>
-            <button class="button" type="button">See more</button>
-        </div>
+    <section>
+        <div id="container">
+            <div id="welcome">
+                <h1>Welcome!</h1>
+                <p>It's nice to see you here!</p>
+                <button class="button" type="button">Let's go!</button>
+            </div>
+            <hr>
+            <div id="development">
+                <h2>Development</h2>
+                <p>Check out some projects!</p>
+                <button class="button" type="button">See more</button>
+            </div>
 
-        <div id="photography">
-            <h3>Photography series to be seen!</h3>
-            <p>Check out the series!</p>
-            <button class="button" type="button">See more</button>
-        </div>
-
-        <hr>
+            <div id="photography">
+                <h3>Photography series to be seen!</h3>
+                <p>Check out the series!</p>
+                <button class="button" type="button">See more</button>
+            </div>
+    </section>
+    <hr>
+    <section>
         <div id="social">
             <h4>Social Media</h4>
             <p>~~ social media links ~~</p>
         </div>
+    </section>
     </div>
     <footer>Desenvolvido por Marcos Vinicius Ferreira - Copyright &#169 2021</footer>
 </body>
