Add imgs e aplicação no css

--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
             </div>
 
             <div id="photography">
-                <h3>Photography series to be seen!</h3>
+                <h3>Photography</h3>
                 <p>Check out the series!</p>
                 <button class="button" type="button">See more</button>
             </div>
