alteração das imgs e ordenação do css

--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
             <header>
                 <nav>
                     <ul>
-                        <li>Home</li>
+                        <li class="select">Home</li>
                         <li>Desenvolvimento</li>
                         <li>Fotografia</li>
                         <li>Sobre mim</li>
@@ -26,35 +26,33 @@
         </div>
     </section>
     <hr>
-    <section>
-        <div id="container">
-            <div id="welcome">
-                <h1>Welcome!</h1>
-                <p>It's nice to see you here!</p>
-                <button class="button" type="button">Let's go!</button>
-            </div>
-            <hr>
-            <div id="development">
-                <h2>Development</h2>
-                <p>Check out some projects!</p>
-                <button class="button" type="button">See more</button>
-            </div>
-
-            <div id="photography">
-                <h3>Photography</h3>
-                <p>Check out the series!</p>
-                <button class="button" type="button">See more</button>
-            </div>
-    </section>
-    <hr>
-    <section>
-        <div id="social">
+    <div id="container">
+        <div class="welcome">
+            <h1>Welcome!</h1>
+            <p>It's nice to see you here!</p>
+            <button class="button" type="button">Let's go!</button>
+        </div>
+        <hr>
+        <div class="development">
+            <h2>Development</h2>
+            <p>Check out some projects!</p>
+            <button class="button" type="button">See more</button>
+        </div>
+        <hr>
+        <div class="photography">
+            <h3>Photography</h3>
+            <p>Check out the series!</p>
+            <button class="button" type="button">See more</button>
+        </div>
+        <hr>
+        <div class="social">
             <h4>Social Media</h4>
             <p>~~ social media links ~~</p>
         </div>
-    </section>
     </div>
-    <footer>Desenvolvido por Marcos Vinicius Ferreira - Copyright &#169 2021</footer>
+    <footer class="footer">
+        <p>Desenvolvido por Marcos Vinicius Ferreira - Copyright &#169 2021</p>
+    </footer>
 </body>
 
 </html>
