--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,6 @@
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Desenvolvimento</a></li>
                         <li><a href="#">Fotografia</a></li>
-                        <li><a href="#">Sobre mim</a></li>
                         <li><a href="#">Contato</a></li>
                     </ul>
                 </nav>
@@ -31,19 +30,18 @@
         <div class="welcome">
             <h1>Welcome!</h1>
             <p>É ótimo te ver por aqui! Se aprochegue</p>
-            <button class="button" type="button">Let's go!</button>
         </div>
         <hr>
         <div class="development">
             <h2>Desenvolvimento</h2>
             <p>Aqui estão alguns projetos que desenvolvi ao longo da minha jornada de aprendizado!</p>
-            <button class="button" type="button">See more</button>
+            <button class="button" type="button">Saiba mais</button>
         </div>
         <hr>
         <div class="photography">
             <h2>Fotografia</h2>
             <p>Clique abaixo para ver algumas das minhas fotografias mais recentes!</p>
-            <button class="button" type="button">See more</button>
+            <button class="button" type="button">Saiba mais</button>
         </div>
         <hr>
         <div class="social">
@@ -52,6 +50,7 @@
             <div class="social-items">
                 <a class="social-btn" href="mailto:marcosferreiraf22@gmail.com" target="_blank"><i
                         class="fas fa-envelope-open-text"></i></a>
+                        
                 <a class="social-btn" href="#" target="_blank"><i class="fab fa-whatsapp"></i></a>
                 <a class="social-btn" href="https://www.linkedin.com/in/marcosvmferreira/" target="_blank"><i
                         class="fab fa-linkedin"></i></a>
