Correção de buttons e wrap

--- a/html/index.html
+++ b/html/index.html
@@ -17,10 +17,10 @@
                 <a href="https://marcosnaofazisso.medium.com/" target="_blank" class="logo"><img src="../img/profile.png" alt="profile" class="profile"></a>
                 <nav>
                     <ul class="menu">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#development">Desenvolvimento</a></li>
-                        <li><a href="#">Fotografia</a></li>
-                        <li><a href="#">Contato</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#dev">Desenvolvimento</a></li>
+                        <li><a href="#photo">Fotografia</a></li>
+                        <li><a href="#contact">Contato</a></li>
                     </ul>
                 </nav>
             </header>
@@ -28,7 +28,7 @@
     </section>
     <section id="container">
         <div class="welcome">
-            <h1>Welcome!</h1>
+            <h1 id="home">Welcome!</h1>
             <p>É ótimo te ver por aqui! Se aprochegue!</p>
             <p>Meu nome é Marcos, sou estudante de Análise e Desenvolvimento de Sistemas e estou criando projetos
                 - colocando a mão na massa para aprender cada vez mais! :)</p>
@@ -37,7 +37,7 @@
         </div>
         <hr>
         <div class="development">
-            <h2>Desenvolvimento</h2>
+            <h2 id="dev">Desenvolvimento</h2>
             <p>Aqui estão alguns projetos que desenvolvi ao longo da minha jornada de aprendizado!</p>
             <p>São poucos, simples e que contém muita margem para melhoria e é algo que quero fazer cada vez mais! :D </p>
             <p>Para conhecer é só clicar no botão abaixo!</p>
@@ -45,14 +45,14 @@
         </div>
         <hr>
         <div class="photography">
-            <h2>Fotografia</h2>
+            <h2 id="photo">Fotografia</h2>
             <p>Outra área que também sou apaixonado é fotografia, estou sempre com uma câmera na mão!</p>
             <p>Se quiser conhecer mais meus projetos fotográficos, é só clicar no botão abaixo ;)</p>
             <button class="button2" type="button" onclick="notReady()">Saiba mais</button>
         </div>
         <hr>
         <div class="social">
-            <h3>Contatos</h3>
+            <h3 id="contact">Contatos</h3>
             <p>Será um prazer conversar contigo!</p>
             <p>Geralmente respondo em até 15 minutos em qualquer uma das opções de contato abaixo!</p>
             <div class="social-items">
