changing structure to tests on vercel

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     <title>Marcos Vinicius Ferreira</title>
-    <link rel="stylesheet" href="../css/style.css" type="text/css">
-    <script src="../js/script.js" defer></script>
+    <link rel="stylesheet" href="./style.css" type="text/css">
+    <script src="./script.js" defer></script>
     <script src="https://kit.fontawesome.com/bd9d4c327b.js" crossorigin="anonymous"></script>
 </head>
 
@@ -14,7 +14,7 @@
     <section>
         <div>
             <header class="header">
-                <a href="https://marcosnaofazisso.medium.com/" target="_blank" class="logo"><img src="../img/profile.png" alt="profile" class="profile"></a>
+                <a href="https://marcosnaofazisso.medium.com/" target="_blank" class="logo"><img src="./img/profile.png" alt="profile" class="profile"></a>
                 <nav>
                     <ul class="menu">
                         <li><a href="#">Home</a></li>
