--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     <title>Marcos Vinicius Ferreira</title>
-    <link rel="stylesheet" href="./style.css" type="text/css">
-    <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <script src="./js/script.js" defer></script>
     <script src="https://kit.fontawesome.com/bd9d4c327b.js" crossorigin="anonymous"></script>
 </head>
 
